--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
 
 
-  <title>Frankie's Bakery</title>
+  <title>Akram</title>
 
   <meta name="description" content="" />
   <meta name="author" content="FrankieGRiviera" />
